--- a/day_00/style.css
+++ b/day_00/style.css
@@ -14,3 +14,20 @@ body {
 	overflow: hidden;
 	margin: 0;
 }
+
+.nav {
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 1rem;
+}
+
+.nav-link:link, .nav-link:visited {
+	text-decoration: none;
+	color: black;
+	font-weight: bolder;
+}
+
+.nav-link:hover{
+	color: darkgray;
+}
