--- a/day_02/style.css
+++ b/day_02/style.css
@@ -20,6 +20,23 @@ body {
 	margin: 0;
 }
 
+.nav {
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 1rem;
+}
+
+.nav-link:link, .nav-link:visited {
+	text-decoration: none;
+	color: black;
+	font-weight: bolder;
+}
+
+.nav-link:hover{
+	color: darkgray;
+}
+
 .container {
 	text-align: center;
 }
