--- a/day_06/style.css
+++ b/day_06/style.css
@@ -14,6 +14,24 @@ body {
 	border-color: #efedd6;
 	overflow-x: hidden;
 }
+
+.nav {
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 1rem;
+}
+
+.nav-link:link, .nav-link:visited {
+	text-decoration: none;
+	color: black;
+	font-weight: bolder;
+}
+
+.nav-link:hover{
+	color: darkgray;
+}
+
 h1 {
 	margin: 10px;
 }
