--- a/day_08/style.css
+++ b/day_08/style.css
@@ -17,6 +17,23 @@ body {
 	margin: 0;
 }
 
+.nav {
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 1rem;
+}
+
+.nav-link:link, .nav-link:visited {
+	text-decoration: none;
+	color: black;
+	font-weight: bolder;
+}
+
+.nav-link:hover{
+	color: darkgray;
+}
+
 .container {
 	background-color: rgba(0, 0, 0, 0.4);
 	padding: 20px 40px;
