--- a/day_13/style.css
+++ b/day_13/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap');
 
 * {
 	box-sizing: border-box;
 }
 
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Muli', sans-serif;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -13,6 +13,7 @@ body {
 	height: 100vh;
 	overflow: hidden;
 	margin: 0;
+	background-color: #2b88f0;
 }
 
 .nav {
@@ -22,12 +23,47 @@ body {
 	padding: 1rem;
 }
 
-.nav-link:link, .nav-link:visited {
+.nav-link:link,
+.nav-link:visited {
 	text-decoration: none;
 	color: black;
 	font-weight: bolder;
 }
 
-.nav-link:hover{
+.nav-link:hover {
 	color: darkgray;
+}
+
+h3 {
+	color: #fff;
+	margin: 10px 0 20px;
+}
+
+.container {
+	width: 500px;
+}
+
+textarea {
+	border: none;
+	display: block;
+	width: 100%;
+	height: 100px;
+	font-family: inherit;
+	padding: 10px;
+	margin: 0 0 20px;
+	font-size: 16px;
+}
+
+.tag {
+	background-color: #f0923b;
+	color: #fff;
+	border-radius: 50px;
+	padding: 10px 20px;
+	margin: 0 5px 10px 0;
+	font-size: 14px;
+	display: inline-block;
+}
+
+.tag.highlight {
+	background-color: #273c76;
 }
